Requisition No filter and bug fixed

--- a/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
+++ b/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
@@ -349,5 +349,27 @@
              $(this).autocomplete("search");
          });
 
+        $('#ddlProjectId').on('change', function (event) {
+            var projectId = $("#ddlProjectId option:selected").val();
+            var showRequisitionList = $("#ddlRequisitionId");
+            $.ajax({
+                type: "GET",
+                url: "/ChequeRegister/RequisitionListWithFilter",
+                dataType: "json",
+                data: { projectId: projectId },
+                success: function (data) {
+                    showRequisitionList.empty();
+                    showRequisitionList.append("<option selected disabled>==Select Requisition==</option>");
+
+                    $.each(data, function (index, item) {
+                        showRequisitionList.append($('<option>', {
+                            value: item.Value,
+                            text: item.Text
+                        }));
+                    });
+                }
+            });
+        });
+
     </script>
 }
