--- a/ErpReport/ErpReport/TCL_ChequeRegisterInfoReport.rdl
+++ b/ErpReport/ErpReport/TCL_ChequeRegisterInfoReport.rdl
@@ -7,9 +7,9 @@
     </am:CreatedBy>
     <am:UpdatedBy>
       <am:Name>SSDTRS</am:Name>
-      <am:Version>17.9.34607.119</am:Version>
+      <am:Version>17.9.34622.214</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2024-02-24T17:32:59.6051155Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2024-03-08T16:13:23.5116433Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <df:DefaultFontFamily>Segoe UI</df:DefaultFontFamily>
   <AutoRefresh>0</AutoRefresh>
@@ -76,8 +76,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>5.15in</Left>
+            <Top>0.6125in</Top>
+            <Left>5.2625in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <Style>
@@ -105,8 +105,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>5.4in</Left>
+            <Top>0.6125in</Top>
+            <Left>5.5125in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>1</ZIndex>
@@ -137,10 +137,10 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>PayTo1</rd:DefaultName>
-            <Top>0.8625in</Top>
-            <Left>0.75in</Left>
+            <Top>1.1375in</Top>
+            <Left>0.875in</Left>
             <Height>0.3in</Height>
-            <Width>5.6in</Width>
+            <Width>5.475in</Width>
             <ZIndex>2</ZIndex>
             <Style>
               <Border>
@@ -171,8 +171,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>5.9in</Left>
+            <Top>0.6125in</Top>
+            <Left>6.0125in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>3</ZIndex>
@@ -201,8 +201,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>5.65in</Left>
+            <Top>0.6125in</Top>
+            <Left>5.7625in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>4</ZIndex>
@@ -231,8 +231,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>6.15in</Left>
+            <Top>0.6125in</Top>
+            <Left>6.2625in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>5</ZIndex>
@@ -261,8 +261,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>6.4in</Left>
+            <Top>0.6125in</Top>
+            <Left>6.5125in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>6</ZIndex>
@@ -291,8 +291,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>6.65in</Left>
+            <Top>0.6125in</Top>
+            <Left>6.7625in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>7</ZIndex>
@@ -321,8 +321,8 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>DateText</rd:DefaultName>
-            <Top>0.375in</Top>
-            <Left>6.9in</Left>
+            <Top>0.6125in</Top>
+            <Left>7.0125in</Left>
             <Height>0.25in</Height>
             <Width>0.25in</Width>
             <ZIndex>8</ZIndex>
@@ -345,6 +345,12 @@
                       <FontFamily>times New Roman</FontFamily>
                     </Style>
                   </TextRun>
+                  <TextRun>
+                    <Value xml:space="preserve"> </Value>
+                    <Style>
+                      <FontFamily>times New Roman</FontFamily>
+                    </Style>
+                  </TextRun>
                 </TextRuns>
                 <Style>
                   <TextAlign>Left</TextAlign>
@@ -352,7 +358,7 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>AmountToWord</rd:DefaultName>
-            <Top>1.6375in</Top>
+            <Top>1.5875in</Top>
             <Left>1.3125in</Left>
             <Height>0.5in</Height>
             <Width>3.5in</Width>
@@ -389,7 +395,7 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>PayAmount</rd:DefaultName>
-            <Top>1.6625in</Top>
+            <Top>1.6125in</Top>
             <Left>5.3375in</Left>
             <Height>0.4375in</Height>
             <Width>1.83543in</Width>
@@ -406,7 +412,11 @@
           </Textbox>
         </ReportItems>
         <Height>3.44333in</Height>
-        <Style />
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
       </Body>
       <Width>7.42918in</Width>
       <Page>
