New Cheque requisition select error solved

--- a/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
+++ b/KGERP/Views/ChequeRegister/NewChequeRegister.cshtml
@@ -291,6 +291,9 @@
             yearRange: "2001:+50"
         });
 
+        var isEdited = false;
+        var reuisitionId = 0;
+
         function makeEditble(chequeRegisterId) {
             if (chequeRegisterId !== null) {
 
@@ -314,26 +317,8 @@
                         $('#txtAmount').val(data.Amount);
                         $('#txtPayTo').val(data.PayTo);
                         $('#txtRemarks').val(data.Remarks);
-
-                        var showRequisitionList = $("#ddlRequisitionId");
-                        $.ajax({
-                            type: "GET",
-                            url: "/ChequeRegister/RequisitionListWithFilter",
-                            dataType: "json",
-                            data: { projectId: data.ProjectId },
-                            success: function (data) {
-                                showRequisitionList.empty();
-                                showRequisitionList.append("<option selected disabled>==Select Requisition==</option>");
-
-                                $.each(data, function (index, item) {
-                                    showRequisitionList.append($('<option>', {
-                                        value: item.Value,
-                                        text: item.Text
-                                    }));
-                                });
-                                $('#ddlRequisitionId').val(data.RequisitionId).trigger('change');
-                            }
-                        });
+                        isEdited = true;
+                        reuisitionId = data.RequisitionId;
                     }
                 });
 
@@ -412,6 +397,9 @@
                             text: item.Text
                         }));
                     });
+                    if (isEdited) {
+                        $('#ddlRequisitionId').val(reuisitionId).trigger('change');
+                    }
                 }
             });
         });
