Cheque register page payee name read only and Remarks open in table

--- a/KGERP/Views/ChequeRegister/NewChequeBook.cshtml
+++ b/KGERP/Views/ChequeRegister/NewChequeBook.cshtml
@@ -141,7 +141,7 @@
                                     <th>Laste Page Number</th>
                                     <th>Total Page</th>
                                     <th>Used Page</th>
-                                    <th>Remarks</th>
+                                    <th>Remarks/Purpose</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
